# starpack

./: .coveragerc  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: pr-merge.yml  pypi-build.yml
examples/starpack_basic_example/: Starpack_Example.ipynb  gradio_example.py  heart_disease_score.csv  pred_heart_disease.joblib  predict.py  requirements.txt  starpack.yaml  streamlit_example.py
examples/starpack_test/: heart_disease_score.csv  pred_heart_disease.pkl  requirements.txt  starpack.yaml
src/starpack/: __init__.py  __main__.py  _cmd_deployments.py  _cmd_engine.py  _cmd_packages.py  _config.py  app.py  client.py  core.py  errors.py  initialize.py  main.py  utils.py
src/starpack/client/: __init__.py  starpack_client.py
src/starpack/resources/: __init__.py  resources.py
src/starpack/templates/: package.starpack.yaml  predict.py  starpack.yaml
src/tests/: README.md  test_commands.py  test_core.py  test_engine_client.py  test_errors.py  test_main_funcs.py
tests/: test_commands.py  test_core.py  test_engine_client.py
