[metadata]
name = starpack
version = attr: starpack.__version__
author = "Andromeda 360, Inc"
author_email = irvin.shen@andromeda360.ai
description = A modular utility to package and deploy ML models
long_description_content_type = text/markdown
long_description = file: README.md, LICENSE
keywords = Swagger, OpenAPI, ModelOps, CLI, DataScience, DevOps, MLOps
license = Apache License Version 2.0
classifiers =
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    typer[all]>=0.6.1,<1.0.0
    docker>=6.0.0,<7.0.0
    requests>=2.28.1,<3.0.0
    pydantic[dotenv]>=1.10.2,<1.11.0
    PyYAML>=6.0,<7.0
    click>=8.0.0;platform_system=='Windows'

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    starpack = starpack.__main__:app

[options.extras_require]
dev = 
    pytest>=7.1.2,<=8.0.0
    pytest-cov>=3.0.0,<=4.0.0
    requests-mock>=1.10.0,<=1.11.0
    black>=22.0.0
